Feat: gemini 모델로 변경